[package]
name = "utility"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]

[dependencies]
fast5wrapper = {path = "../fast5wrapper"}
squiggler = {path = "../squiggler"}
dtw = {path = "../dtw"}
rand = "*"
knn_predictor = {path = "../knn_predictor"}
rayon = "*"
bio = "*"
histogram_minimizer = {path = "../histogram_minimizer"}
num = "*"